tests/fixtures/invalid/str_add_int.py
# Cannot add Str and Int
x: str = "hello" + 1
